--- a/styles.css
+++ b/styles.css
@@ -136,11 +136,19 @@ table {
 
 /* END OF CSS RESET */
 
+.desktop-img {
+  display: block;
+}
+.mobile-img {
+  display: none;
+}
+
 @media (max-width: 375px) {
-  .image {
-    background-image: url('/images/image-product-mobile.jpg');
-    width: 500;
-    height: 500;
+  .desktop-img {
+    display: none;
+  }
+  .mobile-img {
+    display: block;
   }
   .card {
     display: flex;
