--- a/styles.css
+++ b/styles.css
@@ -138,15 +138,26 @@ table {
 body {
   background-color: var(--cream);
 }
-
+.container {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+}
 .desktop-img {
   display: block;
+  width: 100%;
 }
 .mobile-img {
   display: none;
 }
 .img-container {
   max-width: 1440px;
+}
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 50vw;
 }
 
 @media (max-width: 375px) {
@@ -161,10 +172,9 @@ body {
     max-width: 375px;
   }
   .card {
+    flex-direction: column;
     margin: 0 auto;
     padding: 1rem;
-    min-height: 100vh;
-    min-width: 100vw;
     border-radius: 5px;
   }
 }
@@ -214,7 +224,9 @@ body {
   font-size: 0.8rem;
   color: var(--dark-greyish-blue);
 }
-
+svg {
+  margin-right: 10px;
+}
 .to-cart-btn {
   display: block;
   margin: 0 auto;
@@ -222,6 +234,7 @@ body {
   width: 100%;
   background-color: var(--dark-cyan);
   color: var(--white);
+  font-size: 1.1rem;
   font-weight: 700;
   border-radius: 5px;
 }
